syntax = "proto3";

import "google/protobuf/struct.proto";

package graphql;

service GraphQL {
    rpc Query(GraphQLRequest) returns (GraphQLResponse);
    rpc Mutation(GraphQLRequest) returns (GraphQLResponse);
    rpc Subscription(GraphQLRequest) returns (stream GraphQLResponse);
}

message GraphQLRequest {
    string query = 1;
    string operation_name = 2;
    map<string, google.protobuf.Value> variables = 3;
}

message GraphQLResponse {
    optional google.protobuf.Value data = 1;
    optional google.protobuf.Value errors = 2;
}
